tests/invalid/test_may_duplicate.err_exp3
test_may_duplicate.m:039: Error: the `may_duplicate' attribute on the
test_may_duplicate.m:039:   foreign_proc contradicts the `no_inline' pragma on
test_may_duplicate.m:039:   the predicate.
test_may_duplicate.m:061: Error: the `may_not_duplicate' attribute on the
test_may_duplicate.m:061:   foreign_proc contradicts the `inline' pragma on the
test_may_duplicate.m:061:   predicate.
